@@ -33,6 +33,10 @@ compileJava {
 	options.compilerArgs += '--enable-preview'
 }
 
+test {
+	jvmArgs += "--enable-preview"
+}
+
 java {
 	modularity.inferModulePath = true
 }
@@ -103,6 +107,7 @@ graalvmNative {
 
 configurations {
 	fatJar.extendsFrom implementation
+	testRuntimeClasspath.exclude module: 'jai-imageio-core' // exclude loading image by mmap in tests
 }
 
 task fatJar(type: Jar) {
@@ -147,18 +152,21 @@ dependencies {
 //	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 	implementation group: 'com.github.spullara.mustache.java', name: 'compiler', version: mustacheVersion
 	implementation group: 'com.twelvemonkeys.imageio', name: 'imageio-jpeg', version: twelvemonkeysVersion
-	implementation group: 'com.github.jai-imageio', name: 'jai-imageio-core', version: '1.4.0'
+	implementation group: 'com.github.jai-imageio', name: 'jai-imageio-core', version: jaiVersion
 	implementation group: 'jakarta.json', name: 'jakarta.json-api', version: jakartajsonVersion
 	implementation group: 'org.glassfish', name: 'jakarta.json', version: jakartajsonVersion, classifier: 'module'
 	implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: slf4jVersion
 
-	testCompileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
-	testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+
+	testCompileOnly files({ tasks.installLombok.outputs.files })
+	testAnnotationProcessor files({ tasks.installLombok.outputs.files })
+//	testCompileOnly group: 'org.projectlombok', name: 'lombok', version: lombokVersion
+//	testAnnotationProcessor group: 'org.projectlombok', name: 'lombok', version: lombokVersion
 
 	testImplementation enforcedPlatform(group: 'org.spockframework', name: 'spock-bom', version: spockVersion)
 	testImplementation group: 'org.spockframework', name: 'spock-core'
-	testImplementation group: 'net.bytebuddy', name: 'byte-buddy'
-	testImplementation group: 'org.objenesis', name: 'objenesis'
+	testImplementation group: 'net.bytebuddy', name: 'byte-buddy', version: bytebuddyVersion
+	testImplementation group: 'org.objenesis', name: 'objenesis', version: objenesisVersion
 	testImplementation group: 'com.google.jimfs', name: 'jimfs', version: memoryfilesystemVersion
 	testImplementation group: 'com.github.tomakehurst', name: 'wiremock-jre8', version: wiremockVersion
 }
